# YoloLLM

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  base.py  cli.py  config.py  exceptions.py  mask_processing.py  pyproject.toml  requirements-dev.txt  requirements.txt  version.py  yolo_detect.py  yolo_fastsam.py  yolo_pose.py  yolo_sam.py  yolo_segment.py  yoloe_segment.py
.github/workflows/: ci.yml
data/: coco80_tree.txt
tests/: conftest.py  test_all_models.py  test_all_models_quiet.py  test_base.py  test_detection.py  test_exceptions.py  test_mask_processing.py
yoloenv/: pyvenv.cfg
