[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "yolollm"
version = "1.0.0"
description = "Comprehensive YOLO/SAM object detection, segmentation, and pose estimation toolkit"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "csv610" }]
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.0.0",
    "tabulate>=0.9.0",
    "supervision>=0.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.20.0",
]

[project.scripts]
yolollm = "cli:main"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_unused_configs = true
explicit_package_bases = true
exclude = ["yoloenv/", ".git/"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "yoloenv/*"]

